# _GeoConsole_V3

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TASKS.md  anthropic_assessment.md  docker-compose.vps.yml  docker-compose.yml
.windsurf/rules/: documentation.md  never.md  workspace.md
deployment/: DEPLOYMENT.md  DOCKER-DEPLOYMENT.md  README.md  build-frontend-native.sh  build-frontend.sh  deploy.sh  docker-deploy.sh  geoconsole.service
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/components/: BasemapSelector.svelte  LayerPanel.svelte  MapStudio.svelte  SqlConsole.svelte  SqlFilter.svelte  StyleEditor.svelte
frontend/src/lib/services/: api.ts  deckgl.ts  duckdb.ts
frontend/src/lib/stores/: mapStudio.svelte.ts
frontend/src/lib/types/: mapStudio.ts
src/: db.rs  error.rs  lib.rs  main.rs  models.rs
src/api/: datasets.rs  maps.rs  mod.rs  routing.rs  spatial.rs
tests/: integration_tests.rs
